css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* CSS styling starts here */

* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Roboto', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-size: 18px;
    margin-bottom: 15px;
    font-family: 'Rubik', sans-serif;
}

p {
    line-height: 1.4;
}

.container {
    width: 800px;
    margin: 0 auto;
}

/* header tag */

.nav-bar-container{
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    margin:1.5% auto;
}

nav{
    display: flex;
    justify-content: space-around;
    align-items: center;
    width:100%;
}

nav a{
    color: black;
    text-decoration: none;
    font-size:0.9rem
}

header img{
    margin: 1% auto;
}

/* homepage top content */

.top-content {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin-bottom: 20px;
    border-bottom: 1px dashed black;
}

.top-content .text-container {
    width: 48%;
    padding: 0 1%;
    padding-bottom: 20px;  
}

/* homepage middle content */

.middle-content {
    margin-bottom: 20px;
    border-bottom: 1px dashed black;
}

.middle-content h2 {
    padding: 0 2%;
    margin-bottom: 0;
}

.middle-content .boxes {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.middle-content .boxes .box {
    width: 12.5%;
    height: 100px;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}

/* box colors */

.item1{
    background-color: teal;
}

.item2{
    background-color: gold;
}

.item3{
    background-color: cadetblue;
}

.item4{
    background-color: coral;
}

.item5{
    background-color: crimson;
}

.item6{
    background-color: forestgreen;
}

.item7{
    background-color: darkorchid;
}
.item8{
    background-color: hotpink;
}

.item9{
    background-color: indigo;
}

.item10{
    background-color: dodgerblue;
}

/* homepage bottom content */

.bottom-content {
    display: flex;
    margin: 0 2% 20px;
    justify-content: space-around;
}

.bottom-content .text-container {
    padding-right: 4%;
}

.bottom-content .text-container:last-child {
    padding-right: 0;
}
/* footer */
footer {
    width: 100%;
    background: black;
}

footer nav {
    width: 60%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 2%;
    font-size: 14px;
}

footer nav a {
    color: white;
    text-decoration: none;
}

/* about section styling */

/* about page top content */

.about-top-section-header{
    padding: 2%;
}

/* about page middle content */

.about-middle-section{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    padding: 0 2%;
    height:140vh;
}

.about-middle-section div{
    display: flex;
    flex-flow:column wrap;
    justify-content: space-evenly;
    width:47%;
    margin-bottom: 3%;
    border-bottom: dashed black 1px;
}

.about-middle-section a{
    display: flex;
    justify-content: center;
    align-items: center;
    text-decoration: none;
    width: 35%;
    color: black;
    border: black 3px solid;
    border-radius: 10px;
    padding: 2%;
}
/* about page bottom content styling*/
.about-bottom-section{
    padding: 2%;
    margin-bottom: 4%;
}

